--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="img">
             
-        <img src="/images/Scarecrow.png" alt="">
+        <img src="images/Scarecrow.png" alt="">
         
        </div>
        <div class="text">
