--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h1 class="title">I have bad news for you</h1>
         <p class="discription">The page you are looking for might be removed or is temporarily unavailable</p>
         <div class="btn">
-        <button class="primary-btn">Back to homepage</button>
+        <button class="primary-btn"><a href="https://www.google.co.uk/">Back to homepage</a></button>
+        
     </div>
     </div>
     
